swiftide-docker-executor/src/snapshots/swiftide_docker_executor__dockerfile_mangler__tests__remove_cmd_entrypoint_case_insensitive.snap
---
source: swiftide-docker-executor/src/dockerfile_mangler.rs
expression: result.content
---
from alpine
COPY --from=bosunai/swiftide-docker-service:[CARGO_PKG_VERSION] /usr/bin/swiftide-docker-service /usr/local/bin/swiftide-docker-service
COPY --from=bosunai/swiftide-docker-service:[CARGO_PKG_VERSION] /usr/bin/rg /usr/local/bin/rg
COPY --from=bosunai/swiftide-docker-service:[CARGO_PKG_VERSION] /usr/bin/fd /usr/local/bin/fd
